--- a/Statistics/A01369984_BCase.ipynb
+++ b/Statistics/A01369984_BCase.ipynb
@@ -1571,7 +1571,11 @@
    "source": [
     " Para cada sector (y para todos los sectores), \n",
     "> ###### ¿Qué puede decir sobre el tamaño típico de la empresa en términos de valor de mercado y valor contable? \n",
+    "**RESPUESTA.**\n",
+    "\n",
     "> ###### ¿Cuánto cambian estas variables dentro de cada industria? \n",
+    "**RESPUESTA.**\n",
+    "\n",
     "> ###### ¿Cómo se distribuye el tamaño de la empresa (en valor de mercado)?\n",
     "**RESPUESTA.**"
    ]
@@ -1886,7 +1890,7 @@
     ">###### ¿Qué puede decir sobre el margen de beneficio de las empresas? \n",
     ">###### a) estadísticas descriptivas del margen de beneficios \n",
     ">###### b) gráfico(s) para ilustrar cómo cambia el margen de beneficios entre las industrias.\n",
-    "###### **RESPUESTA.**"
+    "**RESPUESTA.**"
    ]
   },
   {
@@ -2092,7 +2096,7 @@
    "metadata": {},
    "source": [
     ">###### ¿Cuáles son las 10 empresas estadounidenses más grandes en términos de valor de mercado y a qué distancia están del tamaño típico de una empresa estadounidense?\n",
-    "###### **RESPUESTA.**"
+    "**RESPUESTA.**"
    ]
   },
   {
@@ -2215,7 +2219,7 @@
    "metadata": {},
    "source": [
     ">###### ¿Cuáles son las 10 empresas estadounidenses más importantes en términos de valor contable y a qué distancia están del tamaño típico de una empresa estadounidense?\n",
-    "###### **RESPUESTA.**"
+    "**RESPUESTA.**"
    ]
   },
   {
@@ -2364,8 +2368,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Utilizando su subconjunto de empresas que pertenecen a su sector, ¿qué factores (variables) podrían estar relacionados con la rentabilidad anual de las acciones en un trimestre en el futuro? Seleccione al menos 3 factores y explique brevemente. ¿por qué cree que podrían estar relacionados con la rentabilidad de las acciones?.\n",
-    "###### **RESPUESTA.**"
+    "Utilizando su subconjunto de empresas que pertenecen a su sector\n",
+    "> ###### ¿qué factores (variables) podrían estar relacionados con la rentabilidad anual de las acciones en un trimestre en el futuro? \n",
+    "Seleccione al menos 3 factores y explique brevemente.\n",
+    "> ###### ¿por qué cree que podrían estar relacionados con la rentabilidad de las acciones?.\n",
+    "**RESPUESTA.**"
    ]
   },
   {
@@ -2763,8 +2770,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">###### Realice histogramas para cada factor/variable e interpretarlos\n",
-    "###### **RESPUESTA.**"
+    ">###### Realice histogramas para cada factor/variable e interpretarlos"
    ]
   },
   {
@@ -2800,6 +2806,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**RESPUESTA.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 642,
    "metadata": {},
@@ -2832,6 +2845,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**RESPUESTA.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 643,
    "metadata": {},
@@ -2861,6 +2881,13 @@
    ],
    "source": [
     "sns.kdeplot(x=\"Sales Annual G\",data=US_Firms)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**RESPUESTA.**"
    ]
   },
   {
@@ -2899,8 +2926,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">###### Realice trazados para visualizar la posible relación que cada factor podría tener con la variable dependiente.\n",
-    "###### **RESPUESTA.**"
+    "**RESPUESTA.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">###### Realice trazados para visualizar la posible relación que cada factor podría tener con la variable dependiente."
    ]
   },
   {
@@ -2989,8 +3022,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">###### Mostrar estadísticas descriptivas de estos factores.\n",
-    "###### **RESPUESTA.**"
+    ">###### Mostrar estadísticas descriptivas de estos factores."
    ]
   },
   {
@@ -3118,37 +3150,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Diseñe y ejecute un modelo de regresión múltiple para examinar si los factores seleccionados y las ganancias por acción deflactadas por precio pueden explicar/predecir las ganancias anuales de las acciones. Usted tiene que controlar para la industria y el tamaño de la firma. Para controlar estas variables, debe incluirlas como variables independientes adicionales en el modelo.\n",
-    "###### **RESPUESTA.**\n",
+    "Diseñe y ejecute un modelo de regresión múltiple para examinar si los factores seleccionados y las ganancias por acción deflactadas por precio pueden explicar/predecir las ganancias anuales de las acciones. \n",
+    "\n",
+    "Usted tiene que controlar para la industria y el tamaño de la firma. Para controlar estas variables, debe incluirlas como variables independientes adicionales en el modelo.\n",
     "\n",
     ">###### Las variables independientes deben estar en la escala correcta para poder comparar los valores de las variables entre diferentes firmas de cualquier tamaño.\n",
-    "###### **RESPUESTA.**\n",
     "\n",
     ">###### Para cada variable independiente debe comprobar si hay valores atípicos y realizar los ajustes correspondientes para evitar resultados no fiables en el modelo de regresión.\n",
-    "###### **RESPUESTA.**\n",
     "\n",
     ">###### Debe comprobar si existen posibles problemas de multicolinealidad. Explique brevemente qué es multicolinealidad, ejecute e interprete la prueba correspondiente.\n",
-    "###### **RESPUESTA.**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Interpretar el modelo\n",
     "\n",
-    ">###### Interpretar los resultados de cada coeficiente (beta y su significación estadística)\n",
-    "###### **RESPUESTA.**\n",
+    ">###### Interpretar el modelo. Interpretar los resultados de cada coeficiente (beta y su significación estadística). Interpretar el R-cuadrado del modelo.\n",
     "\n",
-    ">###### Interpretar el R-cuadrado del modelo\n",
-    "###### **RESPUESTA.**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "> Ajustes a su modelo. Si hay una o más variables independientes (factores o variables de control) que no son significativas, elimínelas del modelo. Usted tiene que ejecutar e interpretar su modelo final."
+    "**RESPUESTA.**\n",
+    "\n",
+    ">###### Ajustes a su modelo. Si hay una o más variables independientes (factores o variables de control) que no son significativas, elimínelas del modelo. Usted tiene que ejecutar e interpretar su modelo final.\n",
+    "\n",
+    "**RESPUESTA.**"
    ]
   },
   {
