--- a/Statistics/A01369984_BCase.ipynb
+++ b/Statistics/A01369984_BCase.ipynb
@@ -716,14 +716,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Preguntas Especificas***"
+    "#### *Estadistica descriptiva*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Estadistica descriptiva*"
+    "***Preguntas Especificas***"
    ]
   },
   {
@@ -2348,20 +2348,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Considerando todo el historial de datos financieros de todas las empresas:\n",
-    "\n",
-    ">###### ¿Cómo se puede medir la rentabilidad de las empresas que se puede utilizar para comparar el rendimiento entre empresas de diferentes tamaños? Seleccionar y justificar al menos 3 medidas y mostrar estadísticas descriptivas\n",
-    "###### **RESPUESTA.**\n",
-    "\n",
-    ">###### Calcular y explicar las ganancias por acción deflactadas por precio.\n",
-    "###### **RESPUESTA.**"
+    "#### *Modelado estadistico*"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Modelado estadistico*"
+    "Considerando todo el historial de datos financieros de todas las empresas:\n",
+    "\n",
+    ">###### ¿Cómo se puede medir la rentabilidad de las empresas que se puede utilizar para comparar el rendimiento entre empresas de diferentes tamaños? Seleccionar y justificar al menos 3 medidas y mostrar estadísticas descriptivas\n",
+    " **RESPUESTA.**\n",
+    "\n",
+    ">###### Calcular y explicar las ganancias por acción deflactadas por precio.\n",
+    "**RESPUESTA.**"
    ]
   },
   {
