--- a/Statistics/A01369984_BCase.ipynb
+++ b/Statistics/A01369984_BCase.ipynb
@@ -538,6 +538,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**SE COMIENZA HACIENDO LA LECTURA DE LOS ARCHIVOS CSV PARA TENER LA DATASET, SE DESPLIEGA UNA DESCRIPCIÓN DE LOS DATOS, OBTENIENDO LAS VARIABLES QUE CONFORMAN EL DATASET Y EL TIPO DE DATO QUE UTILIZA CADA VARIABLE.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "---"
    ]
   },
@@ -671,6 +678,13 @@
    "source": [
     "# Datos duplicados en el csv\n",
     "us[us.duplicated()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**SE VERIFICA QUE LA DATASER TIENE DATOS NULOS; AL SER UNA GRAN CANTIDAD DE VALORES NULOS NO ES IDEAL BORRARLOS, POR LO QUE NO SE HACE UNA MODIFICACIÓN SIGNIFICATIVA.**"
    ]
   },
   {
@@ -1571,13 +1585,18 @@
    "source": [
     " Para cada sector (y para todos los sectores), \n",
     "> ###### ¿Qué puede decir sobre el tamaño típico de la empresa en términos de valor de mercado y valor contable? \n",
-    "**RESPUESTA.**\n",
     "\n",
     "> ###### ¿Cuánto cambian estas variables dentro de cada industria? \n",
-    "**RESPUESTA.**\n",
     "\n",
     "> ###### ¿Cómo se distribuye el tamaño de la empresa (en valor de mercado)?\n",
     "**RESPUESTA.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**SE OBTIENE INFORMACIÓN DE LA MEDIANA YA QUE AL POSEER DATOS NULOS, EL DATASET SE ENCUNTRA MUY SESGADO Y LA MEDIA NO PROPORCIONA INFORMACIÓN NECESARIA.**\n"
    ]
   },
   {
@@ -1602,6 +1621,13 @@
     "                            round(US_Firms[\"Market Value\"].median(),3),\n",
     "                            '     ',\n",
     "                            round(US_Firms[\"Book Value of the Firms\"].median(),3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**PARA TODAS LAS INDUSTRIAS SE OBTIENE UN TAMAÑO TÍPICO DE 1.570 MILLONES DE DOLARES BASADO EN EL VALOR DE MERCAD, BASANDONOS EN EL VALOR CONTABLE SE OBTIENE UN TAMAÑO TÍPICO DE 567 MILES DE DOLARES**"
    ]
   },
   {
@@ -1649,6 +1675,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**DE ACUERDO AL GRAFICO SE PUEDE OBSERVAR QUE EL VALOR DE MERCADO NO TIENE UNA DISTRIBUCIÓN NORMAL, TENIENDO UNA TENDENCIA DE VALORES ENTRE 0-1 MILLONES DE DOLARES. DE IGUAL MANERA ESTE GRAFICO NOS PERMITE VER QUE HAY UNA GRAN CANTIDAD DE VALORES EN 0**\n",
+    "\n",
+    "**A DIFERENCIA DEL VALOR DE MERCADO, EL VALOR CONTABLE MUESTRA UNA DISTRIBUCIÓN DISPERSA, AL MOSTRAR VALORES NEGATIVOS Y LA TENDENCIA DE VALORES ENTRE 0-2 MILES DE DOLARES. ASÍ MISMO EL GRAFICO MUESTRA UNA GRAN CANTIDAD DE VALORES EN 0**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 593,
    "metadata": {},
@@ -1682,6 +1717,11 @@
     "                            '      ',\n",
     "                            round(manufacturing[\"Book Value of the Firms\"].median(),3))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1891,6 +1931,15 @@
     ">###### a) estadísticas descriptivas del margen de beneficios \n",
     ">###### b) gráfico(s) para ilustrar cómo cambia el margen de beneficios entre las industrias.\n",
     "**RESPUESTA.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BORRAR\n",
+    "\n",
+    "LA INFORMACIÓN QUE NOS PRESENTA EL PROFIT MARGIN ES BASTANTE INTERESANTE, PORQUE NOS DICE QUE HAY VALORES 'INF' LO QUE QUIERE DECIR QUE HAY VENTAS O REVENUES IGUALES O MENORES A 0, LO QUE AFECTA LA INFORMACIÓN QUE SE VA DESPLEGANDO. POSTERIORMENTE, HACEMOS UN GRÁFICO DE BIGOTE QUE SE DEBERIA REPRESENTAR EL PROFIT MARGIN QUE TIENE CADA INDUSTRIA, ES DECIR, COMO VAN LAS GANACIAS DE CADA UNA DE ESTAS INDUSTRIA, POR LO MENCIONADO AL PRINCIPIO NO PODEMOS DAR UNA LECTURA CORRECTA DE LA INFORMACIÓN PRESENTADA."
    ]
   },
   {
@@ -2764,6 +2813,15 @@
     "US_Firms[\"size\"] = pd.cut(US_Firms[\"Market Value\"], bins=3, labels = [\"small\",\"medium\",\"big\"])\n",
     "\n",
     "US_Firms.head(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### BORRAR\n",
+    "\n",
+    "PARA OBTENER LAS FIRMAS CON UN MAYOR RENTABILIDAD, LAS PRICIPALES VARIABLES QUE PODEMOS TOMAR SON LOS EPS (EARNING PER SHARE) QUE SIRVE COMO EL FACTOR DE RENTABILIDAD DE UNA EMPRESA, EL OPERATING PROFIT MARGIN, QUE NOS DA EL PORCENTAJE DE GANACIAS QUE TIENE UNA EMPRESA EN INGRESOS Y LOS RETORNOS SOBRE ACTIVOS (ROA) QUE ES LA RELACIÓN ENTRE EL RENDIMIENTO CON LOS ACTIVOS TOTALES DE LA EMPRESA."
    ]
   },
   {
