--- a/Statistics/A01369984_BCase.ipynb
+++ b/Statistics/A01369984_BCase.ipynb
@@ -1721,7 +1721,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**PARA LA** ***INDUSTRIA COMERCIAL*** **SE TIENE UN TAMAÑO DE EMPRESA DE 2.083 MILLONES DE DOLARES AL BASARSE EN SU VALOR DE MERCADO Y UN TAMAÑO DE 723 MILES DE DOLARES DE SU VALOR CONTABLE DE**\n",
+    "\n",
+    "**EN EL SECTOR DE** ***SERVICIOS*** **SE OBSERVA UN VALOR DE MERCADO DE 2.184 MILLONES DE DOLARES PARA SU TAMAÑO DE EMPRESA Y UNA DIFERENCIA EN SU VALOR CONTABLE CON UNA CANTIDAD DE 544 MILES DE DOLARES.**\n",
+    "\n",
+    "**EN LA** ***INDUSTRIA FINANCIERA*** **EL TAMAÑO DE EMPRESA BASADO EN SU VALOR DE MERCADO ES DE 1.563 MILLONES DE DOLARES, AL BASARNOS EN SU VALOR CONTABLE EL TAMAÑO DE EMPRESA ES DE 893 MILES DE DOLARES.**\n",
+    "\n",
+    "**PARA LA** ***INDUSTRIA DE MANUFACTURA*** **MEDIANTE EL VALOR DE MERCADO SE TIENE UN TAMAÑO DE EMPRESA DE 1.190 MILLONES DE DOLARES, MEDIANTE EL VALOR CONTABLE EL TAMAÑO DE EMPRESA ES DE 363 MILES DE DOLARES.**"
+   ]
   },
   {
    "cell_type": "code",
