--- a/Statistics/A01369984_BCase.ipynb
+++ b/Statistics/A01369984_BCase.ipynb
@@ -1937,22 +1937,12 @@
     "Para cada sector (y para todos los sectores)\n",
     ">###### ¿Qué puede decir sobre el margen de beneficio de las empresas? \n",
     ">###### a) estadísticas descriptivas del margen de beneficios \n",
-    ">###### b) gráfico(s) para ilustrar cómo cambia el margen de beneficios entre las industrias.\n",
-    "**RESPUESTA.**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### BORRAR\n",
-    "\n",
-    "LA INFORMACIÓN QUE NOS PRESENTA EL PROFIT MARGIN ES BASTANTE INTERESANTE, PORQUE NOS DICE QUE HAY VALORES 'INF' LO QUE QUIERE DECIR QUE HAY VENTAS O REVENUES IGUALES O MENORES A 0, LO QUE AFECTA LA INFORMACIÓN QUE SE VA DESPLEGANDO. POSTERIORMENTE, HACEMOS UN GRÁFICO DE BIGOTE QUE SE DEBERIA REPRESENTAR EL PROFIT MARGIN QUE TIENE CADA INDUSTRIA, ES DECIR, COMO VAN LAS GANACIAS DE CADA UNA DE ESTAS INDUSTRIA, POR LO MENCIONADO AL PRINCIPIO NO PODEMOS DAR UNA LECTURA CORRECTA DE LA INFORMACIÓN PRESENTADA."
+    ">###### b) gráfico(s) para ilustrar cómo cambia el margen de beneficios entre las industrias."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 689,
    "metadata": {},
    "outputs": [
     {
@@ -1967,7 +1957,8 @@
       "50%          0.053\n",
       "75%          0.142\n",
       "max            inf\n",
-      "Name: Profit Margin, dtype: float64\n"
+      "Name: Profit Margin, dtype: float64\n",
+      "All Industries Profit Margin :  0.0531\n"
      ]
     },
     {
@@ -1976,7 +1967,7 @@
        "<AxesSubplot:xlabel='firm'>"
       ]
      },
-     "execution_count": 598,
+     "execution_count": 689,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1996,21 +1987,29 @@
    "source": [
     "# Analisis descriptivo\n",
     "print(US_Firms['Profit Margin'].describe())\n",
+    "print('All Industries Profit Margin : ', round(US_Firms['Profit Margin'].median(),4))\n",
     "US_Firms[\"Profit Margin\"].groupby([\"firm\"]).last().plot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 599,
+   "execution_count": 690,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comercial Profit Margin :  0.0286\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "<AxesSubplot:xlabel='firm'>"
       ]
      },
-     "execution_count": 599,
+     "execution_count": 690,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2028,22 +2027,29 @@
     }
    ],
    "source": [
-    "# comercial['Profit Margin'].describe()\n",
+    "print('Comercial Profit Margin : ', round(comercial['Profit Margin'].median(),4))\n",
     "comercial[\"Profit Margin\"].groupby([\"firm\"]).last().plot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 679,
+   "execution_count": 691,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Services Profit Margin :  0.0406\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "<AxesSubplot:xlabel='firm'>"
       ]
      },
-     "execution_count": 679,
+     "execution_count": 691,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2061,22 +2067,29 @@
     }
    ],
    "source": [
-    "# services['Profit Margin'].describe()\n",
+    "print('Services Profit Margin : ', round(services['Profit Margin'].median(),4))\n",
     "services[\"Profit Margin\"].groupby([\"firm\"]).last().plot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 601,
+   "execution_count": 692,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Financial Services Profit Margin :  0.2989\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "<AxesSubplot:xlabel='firm'>"
       ]
      },
-     "execution_count": 601,
+     "execution_count": 692,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2094,22 +2107,29 @@
     }
    ],
    "source": [
-    "# financial['Profit Margin'].describe()\n",
+    "print('Financial Services Profit Margin : ', round(financial['Profit Margin'].median(),4))\n",
     "financial[\"Profit Margin\"].groupby([\"firm\"]).last().plot()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 602,
+   "execution_count": 693,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Manufacturing Profit Margin :  0.0298\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "<AxesSubplot:xlabel='firm'>"
       ]
      },
-     "execution_count": 602,
+     "execution_count": 693,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2127,8 +2147,20 @@
     }
    ],
    "source": [
-    "# manufacturing['Profit Margin'].describe()\n",
+    "print('Manufacturing Profit Margin : ', round(manufacturing['Profit Margin'].median(),4))\n",
     "manufacturing[\"Profit Margin\"].groupby([\"firm\"]).last().plot()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**EL MARGEN DE BENEFICIO PARA TODAS LAS INDUSTRIAS ES DEL** ***5%*** **DE BENEFICIO POR VENTA**\n",
+    "\n",
+    "- **EL MARGEN DE BENEFICIO PARA LA** ***INDUSTRIA COMERCIAL*** **ES DEL** ***2.87%*** **DE BENEFICIO POR VENTA**\n",
+    "- **EL MARGEN DE BENEFICIO PARA LA** ***INDUSTRIA DE SERVICIOS*** **ES DEL** ***4%*** **DE BENEFICIO POR VENTA**\n",
+    "- **EL MARGEN DE BENEFICIO PARA LA** ***INDUSTRIA FINANCIERA*** **ES DEL** ***29%*** **DE BENEFICIO POR VENTA**\n",
+    "- **EL MARGEN DE BENEFICIO PARA LA** ***INDUSTRIA DE MANUFACTURA*** **ES DEL** ***2.98%*** **DE BENEFICIO POR VENTA**"
    ]
   },
   {
