--- a/Statistics/A01369984_BCase.ipynb
+++ b/Statistics/A01369984_BCase.ipynb
@@ -2185,7 +2185,24 @@
    "metadata": {},
    "source": [
     ">###### ¿Cuáles son las 10 empresas estadounidenses más grandes en términos de valor de mercado y a qué distancia están del tamaño típico de una empresa estadounidense?\n",
-    "**RESPUESTA.**"
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 697,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor de Mercado :  1570573.461\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Valor de Mercado : ', round(US_Firms['Market Value'].median(),3))"
    ]
   },
   {
@@ -2307,8 +2324,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">###### ¿Cuáles son las 10 empresas estadounidenses más importantes en términos de valor contable y a qué distancia están del tamaño típico de una empresa estadounidense?\n",
-    "**RESPUESTA.**"
+    "**DE ACUERDO A LA MEDIANA DEL VALOR DE MERCADO QUE ES DE 1.570 MILLONES DE DOLARES, LAS 10 EMPRESAS MÁS GRANDES SOBREPASAN EL TAMAÑO TÍPICO DE UNA EMPRESA ESTADOUNIDENSE**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">###### ¿Cuáles son las 10 empresas estadounidenses más importantes en términos de valor contable y a qué distancia están del tamaño típico de una empresa estadounidense?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 699,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor Contable :  567545.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Valor Contable : ', round(US_Firms['Book Value of the Firms'].median(),3))"
    ]
   },
   {
@@ -2424,6 +2464,13 @@
    "source": [
     "top = B_Firms.sort_values('Book Value of the Firms', ascending=False)\n",
     "top[['Name','Book Value of the Firms']].head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**DE ACUERDO A LA MEDIANA DEL VALOR CONTABLE QUE ES DE 567 MILES DE DOLARES, LAS 10 EMPRESAS MÁS GRANDES SOBREPASAN EL TAMAÑO TÍPICO DE UNA EMPRESA ESTADOUNIDENSE**"
    ]
   },
   {
