--- a/Statistics/A01369984_BCase.ipynb
+++ b/Statistics/A01369984_BCase.ipynb
@@ -2906,9 +2906,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### BORRAR\n",
-    "\n",
-    "PARA OBTENER LAS FIRMAS CON UN MAYOR RENTABILIDAD, LAS PRICIPALES VARIABLES QUE PODEMOS TOMAR SON LOS EPS (EARNING PER SHARE) QUE SIRVE COMO EL FACTOR DE RENTABILIDAD DE UNA EMPRESA, EL OPERATING PROFIT MARGIN, QUE NOS DA EL PORCENTAJE DE GANACIAS QUE TIENE UNA EMPRESA EN INGRESOS Y LOS RETORNOS SOBRE ACTIVOS (ROA) QUE ES LA RELACIÓN ENTRE EL RENDIMIENTO CON LOS ACTIVOS TOTALES DE LA EMPRESA."
+    "**PARA CONOCER LAS FIRMAS CON UNA MAYOR RENTABILIDAD, LAS VARIABLES QUE SE PUEDEN TOMAR SON :**\n",
+    "- **EARNING PER SHARE - INDICA EL FACTOR DE RENTABILIDAD DE UNA EMPRESA**\n",
+    "- **SALES ANNUAL GROWTH - REPRESENTA EL CAMBIO EN LAS VENTAS CON RESPECTO A UN PERIODO ANTERIOR, ES UN PARAMETRO ESENCIAL PARA CONOCER EL CRECIMIENTO FINANCIERO DE LA EMPRESA**\n",
+    "- **BOOK TO MARKET RATIO - DETERMINA EL VALOR DE MERCADO DE UNA EMPRESA EN RELACIÓN CON SU VALOR REAL**\n"
    ]
   },
   {
