--- a/Statistics/A01369984_BCase.ipynb
+++ b/Statistics/A01369984_BCase.ipynb
@@ -3298,14 +3298,11 @@
     ">###### Para cada variable independiente debe comprobar si hay valores atípicos y realizar los ajustes correspondientes para evitar resultados no fiables en el modelo de regresión.\n",
     "\n",
     ">###### Debe comprobar si existen posibles problemas de multicolinealidad. Explique brevemente qué es multicolinealidad, ejecute e interprete la prueba correspondiente.\n",
+    "**MULTICOLINEALIDAD - HACE REFERENCIA A LA ALTA CORRELACIÓN ENTRE MÁS DE DOS VARIABLES EXPLICATIVAS (VARIABLES INDEPENDIENTES)**\n",
     "\n",
     ">###### Interpretar el modelo. Interpretar los resultados de cada coeficiente (beta y su significación estadística). Interpretar el R-cuadrado del modelo.\n",
     "\n",
-    "**RESPUESTA.**\n",
-    "\n",
-    ">###### Ajustes a su modelo. Si hay una o más variables independientes (factores o variables de control) que no son significativas, elimínelas del modelo. Usted tiene que ejecutar e interpretar su modelo final.\n",
-    "\n",
-    "**RESPUESTA.**"
+    ">###### Ajustes a su modelo. Si hay una o más variables independientes (factores o variables de control) que no son significativas, elimínelas del modelo. Usted tiene que ejecutar e interpretar su modelo final.\n"
    ]
   },
   {
@@ -3608,7 +3605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 713,
+   "execution_count": 717,
    "metadata": {},
    "outputs": [
     {
@@ -3669,7 +3666,7 @@
        "3  Book to Market Ratio 21.224"
       ]
      },
-     "execution_count": 713,
+     "execution_count": 717,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3689,7 +3686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 714,
+   "execution_count": 718,
    "metadata": {},
    "outputs": [
     {
@@ -3702,7 +3699,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.760\n",
       "Method:                 Least Squares   F-statistic:                 3.410e+05\n",
       "Date:                Sat, 10 Sep 2022   Prob (F-statistic):               0.00\n",
-      "Time:                        19:20:17   Log-Likelihood:            -1.1935e+05\n",
+      "Time:                        19:27:09   Log-Likelihood:            -1.1935e+05\n",
       "No. Observations:              323816   AIC:                         2.387e+05\n",
       "Df Residuals:                  323812   BIC:                         2.388e+05\n",
       "Df Model:                           3                                         \n",
@@ -3741,7 +3738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 715,
+   "execution_count": 716,
    "metadata": {},
    "outputs": [
     {
@@ -3750,27 +3747,26 @@
      "text": [
       "                            OLS Regression Results                            \n",
       "==============================================================================\n",
-      "Dep. Variable:                 F1_ret   R-squared:                       0.760\n",
-      "Model:                            OLS   Adj. R-squared:                  0.760\n",
-      "Method:                 Least Squares   F-statistic:                 3.410e+05\n",
+      "Dep. Variable:                 F1_ret   R-squared:                       0.693\n",
+      "Model:                            OLS   Adj. R-squared:                  0.693\n",
+      "Method:                 Least Squares   F-statistic:                 3.650e+05\n",
       "Date:                Sat, 10 Sep 2022   Prob (F-statistic):               0.00\n",
-      "Time:                        19:20:17   Log-Likelihood:            -1.1935e+05\n",
-      "No. Observations:              323816   AIC:                         2.387e+05\n",
-      "Df Residuals:                  323812   BIC:                         2.388e+05\n",
-      "Df Model:                           3                                         \n",
+      "Time:                        19:27:04   Log-Likelihood:            -1.5907e+05\n",
+      "No. Observations:              323816   AIC:                         3.181e+05\n",
+      "Df Residuals:                  323813   BIC:                         3.182e+05\n",
+      "Df Model:                           2                                         \n",
       "Covariance Type:            nonrobust                                         \n",
-      "========================================================================================\n",
-      "                           coef    std err          t      P>|t|      [0.025      0.975]\n",
-      "----------------------------------------------------------------------------------------\n",
-      "const                    0.0384      0.001     36.974      0.000       0.036       0.040\n",
-      "EPSP                     0.0573      0.001     64.193      0.000       0.056       0.059\n",
-      "Sales Annual G           0.0795      0.001     83.757      0.000       0.078       0.081\n",
-      "Book to Market Ratio     0.2213      0.001    300.029      0.000       0.220       0.223\n",
+      "==================================================================================\n",
+      "                     coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "----------------------------------------------------------------------------------\n",
+      "const              0.0966      0.001     83.669      0.000       0.094       0.099\n",
+      "EPSP               0.2401      0.001    325.106      0.000       0.239       0.242\n",
+      "Sales Annual G     0.1995      0.001    204.913      0.000       0.198       0.201\n",
       "==============================================================================\n",
-      "Omnibus:                    60160.667   Durbin-Watson:                   0.807\n",
-      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):           488549.856\n",
-      "Skew:                           0.671   Prob(JB):                         0.00\n",
-      "Kurtosis:                       8.866   Cond. No.                         8.35\n",
+      "Omnibus:                    38996.143   Durbin-Watson:                   0.675\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):           262994.897\n",
+      "Skew:                           0.380   Prob(JB):                         0.00\n",
+      "Kurtosis:                       7.349   Cond. No.                         5.79\n",
       "==============================================================================\n",
       "\n",
       "Notes:\n",
@@ -3780,7 +3776,7 @@
    ],
    "source": [
     "# Getting x and y parameters for the model prediction\n",
-    "x = US_Firms[[\"EPSP\",\"Sales Annual G\",\"Book to Market Ratio\"]]\n",
+    "x = US_Firms[[\"EPSP\",\"Sales Annual G\"]]\n",
     "y = US_Firms['F1_ret']\n",
     "\n",
     "# Getting information to interpret a model\n",
