--- a/Statistics/A01369984_BCase.ipynb
+++ b/Statistics/A01369984_BCase.ipynb
@@ -3737,6 +3737,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**INTERPRETACIÓN**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 716,
    "metadata": {},
@@ -3785,6 +3792,13 @@
     "pred = results.predict(x)\n",
     "\n",
     "print(results.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**INTERPRETACIÓN**"
    ]
   }
  ],
