--- a/Statistics/A01369984_BCase.ipynb
+++ b/Statistics/A01369984_BCase.ipynb
@@ -3318,6 +3318,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**SE DEFINEN LAS VARIABLES INDEPENDIENTES QUE NOS AYUDAN A PREDECIR LOS RETORNOS, LAS CUALES SON:**\n",
+    "- **Earning per share**\n",
+    "- **Sales annual growth**\n",
+    "- **Operating profit growth**\n",
+    "- **Book to market ratio**\n",
+    "- **Short financial leverage**\n",
+    "- **Long financial leverage**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 235,
    "metadata": {},
@@ -3440,7 +3453,7 @@
     }
    ],
    "source": [
-    "# Earning per share:\n",
+    "# Earning per share\n",
     "US_Firms[\"EPSP\"] = US_Firms['Net Income'] / US_Firms[\"sharesoutstanding\"]\n",
     "\n",
     "# Sales annual growth\n",
@@ -3463,6 +3476,13 @@
     "US_Firms[\"size\"] = pd.cut(US_Firms[\"Market Value\"], bins=3, labels = [\"small\",\"medium\",\"big\"])\n",
     "\n",
     "US_Firms.head(0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**SE REALIZA EL WINSORIZE PARA CADA VARIABLE PARA ELIMINAR LOS VALORES ATÍPICOS**"
    ]
   },
   {
@@ -3781,6 +3801,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**PARA VERIFICAR LA MULTICOLINEARIDAD SE EJECUTA LA CORRELACIÓN ENTRE VALORES**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 261,
    "metadata": {},
@@ -3939,6 +3966,202 @@
    "source": [
     "# Correlación\n",
     "US_Firms[[\"F1_ret\",\"EPSP\",\"Sales Annual G\",\"OPG\",\"OPM\",\"Book to Market Ratio\",\"SFL\",\"LFL\"]].corr(method='pearson')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**VERIFICANDO LOS VALORES Y UTILIZANDO UNA CORRELACIÓN DE 0.85, PODEMOS DESTACAR LAS VARIABLES QUE MUESTRAN MULTICOLINEARIDAD, ARROJANDO UN VALOR DE** ***TRUE***."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>F1_ret</th>\n",
+       "      <th>EPSP</th>\n",
+       "      <th>Sales Annual G</th>\n",
+       "      <th>OPG</th>\n",
+       "      <th>OPM</th>\n",
+       "      <th>Book to Market Ratio</th>\n",
+       "      <th>SFL</th>\n",
+       "      <th>LFL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>F1_ret</th>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EPSP</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Sales Annual G</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OPG</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OPM</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Book to Market Ratio</th>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SFL</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LFL</th>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      F1_ret   EPSP  Sales Annual G    OPG    OPM  \\\n",
+       "F1_ret                  True  False           False  False  False   \n",
+       "EPSP                   False   True           False  False   True   \n",
+       "Sales Annual G         False  False            True  False  False   \n",
+       "OPG                    False  False           False   True  False   \n",
+       "OPM                    False   True           False  False   True   \n",
+       "Book to Market Ratio    True   True           False  False  False   \n",
+       "SFL                    False  False           False  False   True   \n",
+       "LFL                    False   True           False  False   True   \n",
+       "\n",
+       "                      Book to Market Ratio    SFL    LFL  \n",
+       "F1_ret                                True  False  False  \n",
+       "EPSP                                  True  False   True  \n",
+       "Sales Annual G                       False  False  False  \n",
+       "OPG                                  False  False  False  \n",
+       "OPM                                  False   True   True  \n",
+       "Book to Market Ratio                  True  False   True  \n",
+       "SFL                                  False   True  False  \n",
+       "LFL                                   True  False   True  "
+      ]
+     },
+     "execution_count": 270,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "US_Firms[[\"F1_ret\",\"EPSP\",\"Sales Annual G\",\"OPG\",\"OPM\",\"Book to Market Ratio\",\"SFL\",\"LFL\"]].corr(method='pearson')>0.85"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "F1_ret                  2\n",
+       "EPSP                    4\n",
+       "Sales Annual G          1\n",
+       "OPG                     1\n",
+       "OPM                     4\n",
+       "Book to Market Ratio    4\n",
+       "SFL                     2\n",
+       "LFL                     4\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 269,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MULT = US_Firms[[\"F1_ret\",\"EPSP\",\"Sales Annual G\",\"OPG\",\"OPM\",\"Book to Market Ratio\",\"SFL\",\"LFL\"]].corr(method='pearson')>0.85\n",
+    "MULT.sum()"
    ]
   },
   {
