--- a/A01369984_W1.ipynb
+++ b/A01369984_W1.ipynb
@@ -1102,7 +1102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> ### **RESPUESTA**"
+    "**EN EL HISTOGRAMA SE MUESTRA UNA DISTRIBUCIÓN NORMAL, SIN EMBARGO EXISTE UNA CLARA DIFERENCIA ENTRE LOS RETORNOS SIMULADOS Y LOS REALES**"
    ]
   }
  ],
